# rust-actix-sqlx-graphql-boilerplate

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  package.json
assets/locales/en-US/: base.ftl  db.ftl  mailer.ftl  paseto.ftl  s3.ftl  success.ftl  user_agent_parser.ftl  version.ftl
assets/migrations/: 001_base.sql  002_settings.sql  003_core.sql
assets/static/css/: error.css
assets/templates/emails/setup/: config.html.hbs
assets/templates/errors/: 404.html
assets/templates/tests/sse/: benchmark.js  sse.html
assets/templates/tests/websockets/: ws.html
backend/config/: Cargo.toml
backend/config/src/: cors.rs  env.rs  lib.rs  page.rs  template.rs
backend/model/: Cargo.toml
backend/model/src/: lib.rs
backend/model/src/guards/: mod.rs
backend/model/src/roles/: actor.rs  mod.rs
backend/model/src/statuses/: actor.rs  mod.rs
backend/resolver/: Cargo.toml
backend/resolver/src/: lib.rs
backend/resolver/src/handler/: mod.rs
backend/resolver/src/handler/setup/: mutation.rs  query.rs
backend/resolver/src/handler/version/: mutation.rs  query.rs
backend/resolver/src/root/: mod.rs  mutation.rs  query.rs
backend/server/: Cargo.toml
backend/server/src/: main.rs
backend/server/src/pages/: mod.rs
macros/: Cargo.toml
macros/as_form_derive/: Cargo.toml
macros/as_form_derive/src/: lib.rs
macros/set_cipher_derive/: Cargo.toml
macros/set_cipher_derive/src/: lib.rs
macros/set_is_empty_derive/: Cargo.toml
macros/set_is_empty_derive/src/: lib.rs
macros/set_mutate_derive/: Cargo.toml
macros/set_mutate_derive/src/: lib.rs
macros/src/: lib.rs
