[workspace]
members = [
    "backend/config",
    "backend/model",
    "backend/resolver",
    "backend/server",
    "library",
    "macros"
]

default-members = ["backend/server"]
resolver = "2"

[workspace.dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-utils = "3.0.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
actix-web-lab = "0.20"
actix-files = "0.6.2"
arraygen = "0.3.2"
async-graphql = "6.0.10"
async-graphql-actix-web = "6.0.10"
anyhow = "1.0.72"
autometrics = "0.6.0"
base64-url = "2.0.0"
chrono = "0.4.31"
cron = "0.12.0"
dotenvy = "0.15.7"
fluent-templates = "0.8.0"
handlebars = "4.3.7"
image = "0.24.6"
infer = "0.15.0"
lettre = "0.11.0"
nanoid = "0.4.0"
futures = "0.3.29"
futures-util = "0.3.29"
once_cell = "1.18.0"
openssl = "0.10"
parking_lot = "0.12.1"
paseto = "2.0.2+1.0.3"
pin-project = "1.1.3"
rand = "0.8.5"
reqwest = "0.11"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
sentry = "0.31.7"
serde = "1.0.190"
serde_json = "1.0.108"
slugify = "0.1.0"
sqlx = "0.7.2"
sse-actix-web = "0.8.1"
thiserror = "1.0.50"
tokio = "1.28.2"
tokio-stream = "0.1.1"
tracing = "0.1.37"
tracing-actix-web = "0.7.1"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.17"
unic-langid = "0.9.1"
user-agent-parser = "0.3.6"
xsalsa20poly1305 = "0.9.1"

# Derivative Macro
syn = "2.0.37"
quote = "1.0.9"
proc-macro2 = "1.0.67"
deluxe = "0.5.0"

config = { path = "./backend/config" }
library = { path = "./library" }
macros = { path = "./macros" }
model = { path = "./backend/model" }
resolver = { path = "./backend/resolver" }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Getaka Labs"]
description = "QSI GraphQL Server"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
strip = true